--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                 <img class="nav__logo--img" src="./assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="top-logo">
                 <div class="nav__logo--title">Treact</div>
                 </div>
+
+                <!--desktop links-->
                 <div class="nav__links">
                     <a href= "#" class="nav__link">About</a>
                     <a href= "#" class="nav__link">Blog</a>
@@ -23,6 +25,9 @@
                     <a href= "#" class="nav__link">Contact Us</a>
                     <a href= "#" class="nav__link">Login</a>
                     <a href= "#" class="nav__link nav__link--primary">Sign Up</a>
+                </div>
+
+                <!-- mobile menu button (moved outside nav__links)-->
                 <button class="btn__menu" onclick="openMenu()">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
